<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramatsolucoes.rafah.sid.Activity.DoacoesActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbDoacoes"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/toolbar_doacoes"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llEdits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_lledits"
            android:paddingLeft="@dimen/padding_lledits"
            android:paddingRight="@dimen/padding_lledits">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDoador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_nome"
                    android:textSize="@dimen/texto_edits"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCPF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_cpf"
                    android:inputType="number"
                    android:textSize="@dimen/texto_edits"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_valor"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/texto_edits"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/texto_edits" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_telefone"
                    android:inputType="phone"
                    android:textSize="@dimen/texto_edits" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etData"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_data"
                    android:inputType="date"
                    android:textSize="@dimen/texto_edits" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiObservacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/etObservacoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margens_edits_top"
                    android:hint="@string/hint_observacoes"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/texto_edits" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSalvarDoacoes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/altura_botao"
                android:layout_gravity="center"
                android:text="@string/bt_salvar"
                android:textColor="@color/texto_botoes"
                android:textSize="@dimen/texto_botoes"
                android:theme="@style/botaoPadrao"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
